--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint \"**/*.{ts, tsx}\"",
     "eslint:fix": "eslint \"**/*.{ts, tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,9 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.9",
     "@types/node": "^20.9.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -37,6 +40,8 @@
     "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "react-router-dom": "^6.2.1",
     "sass": "^1.69.5",
