--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,9 @@
     "@typescript-eslint/no-misused-promises": "off",
     "react/no-deprecated": "off",
     "@typescript-eslint/naming-convention": "off",
+    "@typescript-eslint/no-confusing-void-expression": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/prefer-ts-expect-error": "off",
     "react/jsx-curly-brace-presence": [
       "warn",
       {
@@ -35,6 +38,13 @@
       "error",
       {
         "markupOnly": true
+      }
+    ],
+    "react/self-closing-comp": [
+      "error",
+      {
+        "component": true,
+        "html": true
       }
     ]
   },
