--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/no-confusing-void-expression": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/prefer-ts-expect-error": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-curly-brace-presence": [
       "warn",
       {
