--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,10 @@
   "extends": [
     "plugin:react/recommended",
     "standard-with-typescript",
-    "plugin:i18next/recommended"
+    "plugin:i18next/recommended",
+    "plugin:storybook/recommended"
   ],
-  "overrides": [
-  ],
+  "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
