--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,4 +29,9 @@
       "module": "CommonJS"
     }
   },
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ]
 }
