--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
   },
   "include": [
     "./config/jest/setupTests.ts",
+    "./config/storybook",
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ]
