include config to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,8 @@
     }
   },
   "include": [
-    "./config/jest/setupTests.ts",
-    "./config/build",
-    "./config/storybook",
+    "./config",
+    "webpack.config.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ]
