--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,7 @@ jobs:
         run: npm run lint:scss
       - name: unit tests
         run: npm run test:unit
+      - name: build storybook
+        run: npm storybook:build
       - name: ui tests
-        run: npm run storybook:build && npm run test:ui:build
+        run: npm run test:ui:build
