--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
       - name: unit tests
         run: npm run test:unit
       - name: build storybook
-        run: npm storybook:build
+        run: npm run storybook:build
       - name: ui tests
         run: npm run test:ui:build
