--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "loki": "^0.33.1",
+    "looks-same": "^9.0.0",
     "mini-css-extract-plugin": "^2.5.3",
     "react-router-dom": "^6.2.1",
     "sass": "^1.49.9",
@@ -91,16 +92,19 @@
   "loki": {
     "configurations": {
       "chrome.laptop": {
-        "target": "chrome.app",
+        "target": "chrome.docker",
         "width": 1366,
         "height": 768,
         "deviceScaleFactor": 1,
         "mobile": false
       },
       "chrome.iphone7": {
-        "target": "chrome.app",
+        "target": "chrome.docker",
         "preset": "iPhone 7"
       }
+    },
+    "looks-same": {
+      "ignoreCaret": true
     }
   }
 }
