--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,16 @@ jobs:
         run: npm run build:prod
       - name: linting typescript
         run: npm run eslint
+        if: always()
       - name: linting css
         run: npm run lint:scss
+        if: always()
       - name: unit tests
         run: npm run test:unit
+        if: always()
       - name: build storybook
         run: npm run storybook:build
+        if: always()
       - name: ui tests
         run: npm run test:ui:build
+        if: always()
