--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test:ui": "npx loki test",
     "test:ui:build": "npx loki test --requireReference --reactUri file:./storybook-static",
     "test:ui:ok": "npx loki approve",
+    "test:ui:report": "npm run test:ui:json && npm run test:ui:report",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook"
   },
@@ -65,6 +68,7 @@
     "looks-same": "^9.0.0",
     "mini-css-extract-plugin": "^2.5.3",
     "react-router-dom": "^6.2.1",
+    "reg-cli": "^0.17.7",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^7.5.3",
